crates/daemon/tests/snapshots/cli_help__cli_help_deliveries_dismiss.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Hide a delivery (false positive)

Usage: mxr deliveries dismiss <DELIVERY_ID>

Arguments:
  <DELIVERY_ID>

Options:
  -h, --help  Print help
