crates/daemon/tests/snapshots/cli_help__cli_help_deliveries_get.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show one delivery, including its source messages

Usage: mxr deliveries get <DELIVERY_ID>

Arguments:
  <DELIVERY_ID>

Options:
  -h, --help  Print help
