crates/daemon/tests/snapshots/cli_help__cli_help_deliveries_resolve.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Mark a delivery delivered/done (leaves the active list)

Usage: mxr deliveries resolve <DELIVERY_ID>

Arguments:
  <DELIVERY_ID>

Options:
  -h, --help  Print help
